tests/reference/asr-bindc_10e-8b10394.stderr
semantic error: The struct in c_p_pointer must be C interoperable
 --> tests/errors/bindc_10e_mod.py:8:429
  |
8 | 
  |                                                                                                                                                                                                                                                                                                                                                                                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not C interoperable
  |
8 | 
  |                                                                                                                                                                                                                                                                                                                                                                                                                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ help: add the @ccallable decorator to this struct to make it C interoperable
